--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,3 +1,12 @@
 .NavBar {
-    background-color: rgb(246, 244, 244);
+    background-color: #fff3d0;
+    padding-top: 12px;
+    
+}
+.NavBar a {
+    margin: 8px;
+}
+
+.Active i {
+  color: #FF781F;
 }
