--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,6 +12,25 @@
     box-sizing: border-box;
 }
 
+.Content {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #dadadf;
+}
+
+.FillerImage {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.Image {
+  max-height: 40vh;
+  max-width: 100%;
+  object-fit: contain;
+}
+
 a {
     color: #100426;
     text-decoration: none;
@@ -27,6 +46,10 @@ a:hover i {
   color: #FF781F;
 }
 
+input[type="file"] {
+  display: none;
+}
+
 i {
     color: #494252;
     font-size: 1.3rem;
@@ -37,4 +60,23 @@ i {
 i:hover {
     cursor: pointer;
     color: #FF781F;
+}
+
+figure {
+  text-align: center;
+  display: inline-block;
+}
+
+/* scrollbar */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
