add style to sign up form

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .NavBar {
-    background-color: #fff3d0;
-    padding-top: 12px;
+    background-color: #fffae8;
+    padding-top: 10px;
     
 }
 .NavBar a {
