--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -16,15 +16,15 @@
 }
 
 .Button:hover:active {
-  background-color: #FF781F !important;
+  background-color: #a59ef9 !important;
 }
 
 .Button:active {
-  background-color: #FF781F !important;
+  background-color: #a59ef9 !important;
 }
 
 .Button:focus {
-  background-color: #FF781F;
+  background-color: #a59ef9;
 }
 
 .Wide {
@@ -35,7 +35,7 @@
 .Blue,
 .BlueOutline:hover,
 .Bright:hover {
-  background-color: #FF781F;
+  background-color: #a59ef9;
   color: #ffffff;
 }
 
@@ -43,7 +43,7 @@
 .Blue:hover {
   /* border: 1px solid #2142b2; */
   background-color: #ffffff;
-  color: #FF781F;
+  color: #a59ef9;
 }
 
 .Black,
