--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,11 +1,12 @@
 .NavBar {
     background-color: #fffae8;
-    padding-top: 10px;
+    padding: 10px 0;
     
 }
 
 .NavLink {
   padding: 5px;
+   margin-right: 1rem;  
 }
 
 
