--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -3,6 +3,8 @@
   align-self: center;
   border-radius: 100px;
   border-color: transparent;
+  background-color: #a59ef9;
+  color: white;
   padding: 4px 10px;
   margin-left: 2px;
   margin-right: 2px;
@@ -10,23 +12,25 @@
 }
 
 .Button:hover {
-  opacity: 0.8;
+  opacity: 0.9;
   border-color: transparent;
   cursor: pointer;
+  background-color: #947eed;
+  color: white;
 }
 
 .Button:hover:active {
-  background-color: #a59ef9 !important;
+  background-color: #8368e2;
 }
 
 .Button:active {
-  background-color: #a59ef9 !important;
+  background-color: #8368e2;
 }
 
 .Button:focus {
-  background-color: #a59ef9;
+  background-color: #947eed;
+  color: white;
 }
-
 
 .Wide {
   padding: 10px 50px;
@@ -42,30 +46,23 @@
 
 .BlueOutline,
 .Blue:hover {
-  /* border: 1px solid #2142b2; */
   background-color: #ffffff;
   color: #a59ef9;
 }
 
 .Black,
 .BlackOutline:hover {
-  /* background-color: #242a3d;
-  color: white; */
   background-color: #242a3d;
   color: aliceblue;
 }
 
 .Black:hover,
 .BlackOutline {
-  /* background-color: #dadadf;
-  color: #242a3d;
-  border-color: #242a3d; */
   background-color: aliceblue;
   color: #242a3d;
 }
 
 .Bright {
-  background-color: #7067CF;
+  background-color: #a59ef9;
   color: #ffffff;
 }
-
