--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -1,10 +1,10 @@
 .Owner {
-  font-weight: bold;
-  color: #FF781F;
+  font-weight: 500;
+  color: #44355B;
   margin-right: 8px;
 }
 
 .Date {
   font-weight: lighter;
-  color: #c1c1c5;
+  color: #d2cff2;
 }
